tests/resource/invalid/type/class/access_unassigned_field.mamba
class X
    def z: Int

    def init(self) =>
        def z: Int := self.z + 5
